fixed contrast error

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -196,3 +196,10 @@ img {
     white-space: nowrap;
     border-width: 0;
 }
+
+body {
+    [data-aos^=fade][data-aos^=fade] {
+        opacity: 1;
+        transition-property: opacity, transform;
+    }
+}
